doc/5.5/Reference.md
---
layout: default
title: "Index"
---

# Index

## Components

<div class="pages-index" markdown="1">

**- A -**
* [`<AccordionForm>`](./AccordionForm.md)<img class="icon" src="./img/premium.svg" />
* [`<Admin>`](./Admin.md)
* [`<AppBar>`](./AppBar.md)
* [`<ArrayField>`](./ArrayField.md)
* [`<ArrayInput>`](./ArrayInput.md)
* [`<Authenticated>`](./Authenticated.md)
* [`<AutocompleteArrayInput>`](./AutocompleteArrayInput.md)
* [`<AutocompleteInput>`](./AutocompleteInput.md)
* [`<AutoSave>`](./AutoSave.md)<img class="icon" src="./img/premium.svg" />

**- B -**
* [`<Breadcrumb>`](./Breadcrumb.md)<img class="icon" src="./img/premium.svg" />
* [`<BooleanField>`](./BooleanField.md)
* [`<BooleanInput>`](./BooleanInput.md)
* [`<BulkDeleteButton>`](./Buttons.md#bulkdeletebutton)
* [`<BulkExportButton>`](./Buttons.md#bulkexportbutton)
* [`<BulkUpdateButton>`](./Buttons.md#bulkupdatebutton)

**- C -**
* [`<Calendar>`](./Calendar.md)<img class="icon" src="./img/premium.svg" />
* [`<CanAccess>`](./CanAccess.md)
* [`<CheckboxGroupInput>`](./CheckboxGroupInput.md)
* [`<CheckForApplicationUpdate>`](./CheckForApplicationUpdate.md)
* [`<ChipField>`](./ChipField.md)
* [`<CloneButton>`](./CloneButton.md)
* [`<CompleteCalendar>`](https://react-admin-ee.marmelab.com/documentation/ra-calendar#completecalendar)<img class="icon" src="./img/premium.svg" />
* [`<Confirm>`](./Confirm.md)
* [`<ContainerLayout>`](./ContainerLayout.md)<img class="icon" src="./img/premium.svg" />
* [`<Count>`](./Count.md)
* [`<Create>`](./Create.md)
* [`<CreateButton>`](./Buttons.md#createbutton)
* [`<CreateDialog>`](./CreateDialog.md)<img class="icon" src="./img/premium.svg" />
* [`<CreateInDialogButton>`](./CreateInDialogButton.md)<img class="icon" src="./img/premium.svg" />
* [`<CustomRoutes>`](./CustomRoutes.md)

**- D -**
* [`<DashboardMenuItem>`](./Menu.md#menudashboarditem)
* [`<Datagrid>`](./Datagrid.md)
* [`<DatagridAG>`](./DatagridAG.md)
* [`<DatagridBody>`](./Datagrid.md#body)
* [`<DatagridRow>`](./Datagrid.md#body)
* [`<DatagridHeader>`](./Datagrid.md#header)
* [`<DateField>`](./DateField.md)
* [`<DateInput>`](./DateInput.md)
* [`<DateRangeInput>`](./DateRangeInput.md)<img class="icon" src="./img/premium.svg" />
* [`<DateTimeInput>`](./DateTimeInput.md)
* [`<DeleteButton>`](./Buttons.md#deletebutton)
* [`<DualListInput>`](./DualListInput.md)<img class="icon" src="./img/premium.svg" />

**- E -**
* [`<Edit>`](./Edit.md)
* [`<EditLive>`](./EditLive.md)<img class="icon" src="./img/premium.svg" />
* [`<EditableDatagrid>`](./EditableDatagrid.md)<img class="icon" src="./img/premium.svg" />
* [`<EditGuesser>`](./EditGuesser.md)
* [`<EditButton>`](./Buttons.md#editbutton)
* [`<EditDialog>`](./EditDialog.md)<img class="icon" src="./img/premium.svg" />
* [`<EditInDialogButton>`](./EditInDialogButton.md)<img class="icon" src="./img/premium.svg" />
* [`<EmailField>`](./EmailField.md)
* [`<Empty>`](./List.md#empty)

**- F -**
* [`<FieldDiff>`](https://react-admin-ee.marmelab.com/documentation/ra-history#fielddiff)<img class="icon" src="./img/premium.svg" />
* [`<FileField>`](./FileField.md)
* [`<FileInput>`](./FileInput.md)
* [`<Filter>`](./List.md#filters-filter-inputs)
* [`<FilterButton>`](./Buttons.md#filterbutton)
* [`<FilterForm>`](./FilterForm.md)
* [`<FilterList>`](./FilterList.md)
* [`<FilterListItem>`](./FilterList.md#children)
* [`<FilterListSection>`](./FilterLiveForm.md#usage)
* [`<FilterLiveForm>`](./FilterLiveForm.md)
* [`<FilterLiveSearch>`](./FilterLiveSearch.md)
* [`<Form>`](./Form.md)
* [`<FormDataConsumer>`](./Inputs.md#linking-two-inputs)
* [`<FormTab>`](./TabbedForm.md)
* [`<FunctionField>`](./FunctionField.md)

**- H -**
* [`<HorizontalMenu>`](./ContainerLayout.md#horizontalmenu)<img class="icon" src="./img/premium.svg" />

**- I -**
* [`<IfCanAccess>`](https://react-admin-ee.marmelab.com/documentation/ra-rbac#ifcanaccess)<img class="icon" src="./img/premium.svg" />
* [`<InfiniteList>`](./InfiniteList.md)
* [`<InfinitePagination>`](./InfiniteList.md)
* [`<ImageField>`](./ImageField.md)
* [`<ImageInput>`](./ImageInput.md)
* [`<ImageInputPreview>`](./ImageInput.md#imageinput)
* [`<InspectorButton>`](./Configurable.md#inspectorbutton)

**- L -**
* [`<Labeled>`](./Labeled.md)
* [`<Layout>`](./Layout.md)
* [`<List>`](./List.md#usage)
* [`<ListBase>`](./ListBase.md#usage)
* [`<ListButton>`](./Buttons.md#listbutton)
* [`<ListGuesser>`](./ListGuesser.md#usage)
* [`<ListLive>`](./ListLive.md)<img class="icon" src="./img/premium.svg" />
* [`<LocalesMenuButton>`](./LocalesMenuButton.md)
* [`<LongForm>`](./LongForm.md)<img class="icon" src="./img/premium.svg" />
* [`<Logout>`](./Authentication.md#customizing-the-logout-component)

**- M -**
* [`<MarkdownField>`](./MarkdownField.md)<img class="icon" src="./img/premium.svg" />
* [`<MarkdownInput>`](./MarkdownInput.md)<img class="icon" src="./img/premium.svg" />
* [`<Menu>`](./Menu.md)
* [`<MenuLive>`](./MenuLive.md)<img class="icon" src="./img/premium.svg" />
* [`<MultiLevelMenu>`](./MultiLevelMenu.md)<img class="icon" src="./img/premium.svg" />

**- N -**
* [`<Notification>`](./Admin.md#notification)
* [`<NullableBooleanInput>`](./NullableBooleanInput.md)
* [`<NumberField>`](./NumberField.md)
* [`<NumberInput>`](./NumberInput.md)

**- P -**
* [`<Pagination>`](./List.md#pagination)
* [`<PasswordInput>`](./PasswordInput.md)
* [`<PreferencesSetter>`](https://react-admin-ee.marmelab.com/documentation/ra-preferences#preferencessetter-setting-preferences-declaratively)<img class="icon" src="./img/premium.svg" />

**- R -**
* [`<RadioButtonGroupInput>`](./RadioButtonGroupInput.md)
* [`<RecordRepresentation>`](./RecordRepresentation.md)
* [`<ReferenceArrayField>`](./ReferenceArrayField.md)
* [`<ReferenceArrayInput>`](./ReferenceArrayInput.md)
* [`<ReferenceField>`](./ReferenceField.md)
* [`<ReferenceInput>`](./ReferenceInput.md)
* [`<ReferenceManyCount>`](./ReferenceManyCount.md)
* [`<ReferenceManyField>`](./ReferenceManyField.md)
* [`<ReferenceManyInput>`](./ReferenceManyInput.md)<img class="icon" src="./img/premium.svg" />
* [`<ReferenceManyToManyField>`](./ReferenceManyToManyField.md)<img class="icon" src="./img/premium.svg" />
* [`<ReferenceManyToManyInput>`](./ReferenceManyToManyInput.md)<img class="icon" src="./img/premium.svg" />
* [`<ReferenceNodeInput>`](./ReferenceNodeInput.md)<img class="icon" src="./img/premium.svg" />
* [`<ReferenceOneField>`](./ReferenceOneField.md)
* [`<ReferenceOneInput>`](./ReferenceOneInput.md)
* [`<Resource>`](./Resource.md)
* [`<RevisionsButton>`](./RevisionsButton.md)<img class="icon" src="./img/premium.svg" />
* [`<RevisionListWithDetailsInDialog>`](https://react-admin-ee.marmelab.com/documentation/ra-history#revisionlistwithdetailsindialog)<img class="icon" src="./img/premium.svg" />
* [`<RichTextField>`](./RichTextField.md)
* [`<RichTextInput>`](./RichTextInput.md)
* [`<RowForm>`](https://react-admin-ee.marmelab.com/documentation/ra-editable-datagrid#rowform)<img class="icon" src="./img/premium.svg" />

**- S -**
* [`<SaveButton>`](./SaveButton.md)
* [`<SavedQueriesList>`](./SavedQueriesList.md)
* [`<Search>`](./Search.md)<img class="icon" src="./img/premium.svg" />
* [`<SearchInput>`](./SearchInput.md)
* [`<SearchWithResult>`](./SearchWithResult.md)<img class="icon" src="./img/premium.svg" />
* [`<SelectAllButton>`](./Buttons.md#selectallbutton)
* [`<SelectArrayInput>`](./SelectArrayInput.md)
* [`<SelectColumnsButton>`](./SelectColumnsButton.md)
* [`<SelectField>`](./SelectField.md)
* [`<SelectInput>`](./SelectInput.md)
* [`<Show>`](./Show.md#show)
* [`<ShowGuesser`](./ShowGuesser.md#showguesser)
* [`<ShowButton>`](./Buttons.md#showbutton)
* [`<ShowDialog>`](https://react-admin-ee.marmelab.com/documentation/ra-form-layout#createdialog-editdialog--showdialog)<img class="icon" src="./img/premium.svg" />
* [`<ShowInDialogButton>`](./ShowInDialogButton.md)<img class="icon" src="./img/premium.svg" />
* [`<ShowLive>`](./ShowLive.md)<img class="icon" src="./img/premium.svg" />
* [`<Sidebar>`](./Layout.md#sidebar)
* [`<SidebarOpenPreferenceSync>`](https://react-admin-ee.marmelab.com/documentation/ra-preferences#sidebaropenpreferencesync-store-the-sidebar-openclose-state-in-preferences)<img class="icon" src="./img/premium.svg" />
* [`<SimpleForm>`](./SimpleForm.md)
* [`<SimpleFormIterator>`](./SimpleFormIterator.md)
* [`<SimpleFormWithRevision>`](./SimpleForm.md#versioning)<img class="icon" src="./img/premium.svg" />
* [`<SimpleList>`](./SimpleList.md)
* [`<SimpleShowLayout>`](./SimpleShowLayout.md)
* [`<SingleFieldList>`](./SingleFieldList.md)
* [`<SmartFieldDiff>`](https://react-admin-ee.marmelab.com/documentation/ra-history#smartfielddiff)<img class="icon" src="./img/premium.svg" />
* [`<SmartRichTextInput>`](./SmartRichTextInput.md)<img class="icon" src="./img/premium.svg" />
* [`<SolarLayout>`](./SolarLayout.md)<img class="icon" src="./img/premium.svg" />
* [`<SolarMenu>`](./SolarLayout.md#solarmenu)<img class="icon" src="./img/premium.svg" />
* [`<SolarAppBar>`](./SolarLayout.md#solarappbar)<img class="icon" src="./img/premium.svg" />
* [`<SortButton>`](./SortButton.md)
* [`<StackedFilters>`](./StackedFilters.md)<img class="icon" src="./img/premium.svg" />

**- T -**
* `<Tab>`
* [`<TabbedForm>`](./TabbedForm.md)
* [`<TabbedFormWithRevision>`](./TabbedForm.md#versioning)<img class="icon" src="./img/premium.svg" />
* [`<TabbedShowLayout>`](./TabbedShowLayout.md)
* [`<TextArrayInput>`](./TextArrayInput.md)
* [`<TextField>`](./TextField.md)
* [`<TextInput>`](./TextInput.md)
* [`<TimeInput>`](./TimeInput.md)
* [`<Title>`](./Title.md)
* [`<TitlePortal>`](./AppBar.md#children)
* [`<ToggleThemeButton>`](./ToggleThemeButton.md)
* [`<TourProvider>`](https://react-admin-ee.marmelab.com/documentation/ra-tour)<img class="icon" src="./img/premium.svg" />
* [`<TranslatableFields>`](./TranslatableFields.md)
* [`<TranslatableInputs>`](./TranslatableInputs.md)
* [`<Tree>`](https://react-admin-ee.marmelab.com/documentation/ra-tree#tree-component)<img class="icon" src="./img/premium.svg" />
* [`<TreeInput>`](./TreeInput.md)<img class="icon" src="./img/premium.svg" />
* [`<TreeWithDetails>`](./TreeWithDetails.md)<img class="icon" src="./img/premium.svg" />
* [`<Toolbar>`](./Toolbar.md)

**- U -**
* [`<UpdateButton>`](./Buttons.md#updatebutton)
* [`<UrlField>`](./UrlField.md)
* [`<UserMenu>`](./AppBar.md#usermenu)

**- W -**
* [`<WithListContext>`](./WithListContext.md)
* [`<WithPermissions>`](./WithPermissions.md)
* [`<WithRecord>`](./WithRecord.md)
* [`<WizardForm>`](./WizardForm.md)<img class="icon" src="./img/premium.svg" />
* [`<WrapperField>`](./WrapperField.md)

</div>

---

## Hooks

<div class="pages-index" markdown="1">

**- A -**
* [`useAppLocationState`](https://react-admin-ee.marmelab.com/documentation/ra-navigation#useapplocationstate-retrieve-and-define-app-location)<img class="icon" src="./img/premium.svg" />
* [`useAppLocationMatcher`](https://react-admin-ee.marmelab.com/documentation/ra-navigation#useapplocationmatcher)<img class="icon" src="./img/premium.svg" />
* [`useAuthenticated`](./useAuthenticated.md)
* [`useAuthProvider`](./useAuthProvider.md)
* [`useAuthState`](./useAuthState.md)

**- C -**
* [`useCanAccess`](./useCanAccess.md)
* [`useCanAccessCallback`](./useCanAccess.md#callback-version)
* [`useCanAccessResources`](./useCanAccess.md#multiple-resources)
* [`useChoicesContext`](./useChoicesContext.md)
* [`useCreate`](./useCreate.md)
* [`useCreateContext`](./useCreateContext.md)
* [`useCreateController`](./useCreateController.md)

**- D -**
* [`useDataProvider`](./useDataProvider.md#usedataprovider)
* [`useDefineAppLocation`](./useDefineAppLocation.md)<img class="icon" src="./img/premium.svg" />
* [`useDelete`](./useDelete.md)
* [`useDeleteMany`](./useDeleteMany.md)

**- E -**
* [`useEditContext`](./useEditContext.md)
* [`useEditController`](./useEditController.md)

**- F -**
* [`useFieldValue`](./useFieldValue.md)

**- G -**
* [`useGetIdentity`](./useGetIdentity.md)
* [`useGetList`](./useGetList.md)
* [`useGetListLive`](./useGetListLive.md)<img class="icon" src="./img/premium.svg" />
* [`useGetLock`](./useGetLock.md)<img class="icon" src="./img/premium.svg" />
* [`useGetLockLive`](./useGetLockLive.md)<img class="icon" src="./img/premium.svg" />
* [`useGetLocks`](./useGetLocks.md)<img class="icon" src="./img/premium.svg" />
* [`useGetLocksLive`](./useGetLocksLive.md)<img class="icon" src="./img/premium.svg" />
* [`useGetMany`](./useGetMany.md)
* [`useGetManyAggregate`](./useGetOne.md#aggregating-getone-calls)
* [`useGetManyReference`](./useGetManyReference.md)
* [`useGetOne`](./useGetOne.md)
* [`useGetOneLive`](./useGetOneLive.md)<img class="icon" src="./img/premium.svg" />
* [`useGetPermissions`](./WithPermissions.md)
* [`useGetRecordId`](./useGetRecordId.md)
* [`useGetRecordRepresentation`](./useGetRecordRepresentation.md)

**- I -**
* [`useInfiniteGetList`](./useInfiniteGetList.md)
* [`useInput`](./useInput.md)

**- L -**
* [`useList`](./useList.md)
* [`useListContext`](./useListContext.md)
* [`useListController`](./useListController.md)
* [`useLocaleState`](./useLocaleState.md)
* [`useLock`](./useLock.md)<img class="icon" src="./img/premium.svg" />
* [`useLockOnCall`](./useLockOnCall.md)<img class="icon" src="./img/premium.svg" />
* [`useLockOnMount`](./useLockOnMount.md)<img class="icon" src="./img/premium.svg" />
* [`useLogin`](./useLogin.md)
* [`useLogout`](./useLogout.md)

**- M -**
* [`useMediaQuery`](./useMediaQuery.md)

**- N -**
* [`useNotify`](./useNotify.md)

**- P -**
* [`usePermissions`](./usePermissions.md)
* [`usePreference`](./Configurable.md#usage)
* [`usePublish`](./usePublish.md)<img class="icon" src="./img/premium.svg" />

**- R -**
* [`useRecordContext`](./useRecordContext.md)
* [`useRecordFromLocation`](./useRecordFromLocation.md)
* [`useRedirect`](./useRedirect.md)
* [`useReference`](./useGetOne.md#aggregating-getone-calls)
* [`useRefresh`](./useRefresh.md)
* [`useRegisterMutationMiddleware`](./useRegisterMutationMiddleware.md)
* [`useRemoveFromStore`](./useRemoveFromStore.md)
* [`useRequireAccess`](./useCanAccess.md#logout-on-failure)
* [`useResetStore`](./useResetStore.md)

**- S -**
* [`useSaveContext`](./useSaveContext.md)
* [`useSearch`](https://react-admin-ee.marmelab.com/documentation/ra-search#usesearch)<img class="icon" src="./img/premium.svg" />
* [`useShowContext`](./useShowContext.md)
* [`useShowController`](./useShowController.md#useshowcontroller)
* [`useStore`](./useStore.md)
* [`useStoreContext`](./useStoreContext.md)
* [`useSubscribe`](./useSubscribe.md)<img class="icon" src="./img/premium.svg" />
* [`useSubscribeCallback`](./useSubscribeCallback.md)<img class="icon" src="./img/premium.svg" />
* [`useSubscribeToRecord`](./useSubscribeToRecord.md)<img class="icon" src="./img/premium.svg" />
* [`useSubscribeToRecordList`](./useSubscribeToRecordList.md)<img class="icon" src="./img/premium.svg" />

**- T -**
* [`useTheme`](./useTheme.md)
* [`useTour`](https://react-admin-ee.marmelab.com/documentation/ra-tour)<img class="icon" src="./img/premium.svg" />
* [`useTranslate`](./useTranslate.md)

**- U -**
* [`useUnique`](./useUnique.md)
* [`useUnlock`](./useUnlock.md)<img class="icon" src="./img/premium.svg" />
* [`useUnselect`](./useUnselect.md)
* [`useUnselectAll`](./useUnselectAll.md)
* [`useUpdate`](./useUpdate.md)
* [`useUpdateMany`](./useUpdateMany.md)

**- W -**
* [`useWarnWhenUnsavedChanges`](./Forms.md#warning-about-unsaved-changes)
* [`withLifecycleCallbacks`](./withLifecycleCallbacks.md)

</div>
